syntax = "proto3";

package com.sitewhere.grpc.service;

option java_multiple_files = true;
option java_package = "com.sitewhere.grpc.service";
option java_outer_classname = "DeviceEventServices";

import "sitewhere-common.proto";
import "device-event-model.proto";
import "device-model.proto";

// Device event management APIs.
service DeviceEventManagement {

	// ####################
	// ### BATCH EVENTS ###
	// ####################
	
	// Add a batch of device events.
	rpc AddDeviceEventBatch (GAddDeviceEventBatchRequest) returns (GAddDeviceEventBatchResponse) {}

	// ######################
	// ### GENERIC EVENTS ###
	// ######################
	
	// Get an event by unique id.
	rpc GetDeviceEventById (GGetDeviceEventByIdRequest) returns (GGetDeviceEventByIdResponse) {}
	
	// Get an event by alternate id.
	rpc GetDeviceEventByAlternateId (GGetDeviceEventByAlternateIdRequest) returns (GGetDeviceEventByAlternateIdResponse) {}
	
	// Stream device events for one or more device assignments.
	rpc StreamDeviceAssignmentEventCreateRequests (stream com.sitewhere.grpc.model.GDeviceAssignmentEventCreateRequest) returns (com.sitewhere.grpc.model.GEventStreamAck) {}

	// ####################
	// ### MEASUREMENTS ###
	// ####################
	
	// Add measurements for an assignment.
	rpc AddMeasurementsForAssignment (GAddMeasurementsForAssignmentRequest) returns (GAddMeasurementsForAssignmentResponse) {}
	
	// List measurements for one or more assignments.
	rpc ListMeasurementsForAssignments (GListMeasurementsForAssignmentsRequest) returns (GListMeasurementsForAssignmentsResponse) {}
	
	// List measurements for one or more areas.
	rpc ListMeasurementsForAreas (GListMeasurementsForAreasRequest) returns (GListMeasurementsForAreasResponse) {}

	// #################
	// ### LOCATIONS ###
	// #################
	
	// Add location for an assignment.
	rpc AddLocationForAssignment (GAddLocationForAssignmentRequest) returns (GAddLocationForAssignmentResponse) {}
	
	// List locations for one or more assignments.
	rpc ListLocationsForAssignments (GListLocationsForAssignmentsRequest) returns (GListLocationsForAssignmentsResponse) {}
	
	// List locations for one or more areas.
	rpc ListLocationsForAreas (GListLocationsForAreasRequest) returns (GListLocationsForAreasResponse) {}

	// ##############
	// ### ALERTS ###
	// ##############
	
	// Add alert for one or more assignments.
	rpc AddAlertForAssignment (GAddAlertForAssignmentRequest) returns (GAddAlertForAssignmentResponse) {}
	
	// List alerts for one or more assignments.
	rpc ListAlertsForAssignments (GListAlertsForAssignmentsRequest) returns (GListAlertsForAssignmentsResponse) {}
	
	// List alerts for one or more areas.
	rpc ListAlertsForAreas (GListAlertsForAreasRequest) returns (GListAlertsForAreasResponse) {}

	// ###################
	// ### STREAM DATA ###
	// ###################
	
	// Add stream data for an assignment.
	rpc AddStreamDataForAssignment (GAddStreamDataForAssignmentRequest) returns (GAddStreamDataForAssignmentResponse) {}
	
	// Get stream data for an assignment.
	rpc GetStreamDataForAssignment (GGetStreamDataForAssignmentRequest) returns (GGetStreamDataForAssignmentResponse) {}
	
	// List stream data for an assignment.
	rpc ListStreamDataForAssignment (GListStreamDataForAssignmentRequest) returns (GListStreamDataForAssignmentResponse) {}

	// ###########################
	// ### COMMAND INVOCATIONS ###
	// ###########################
	
	// Add command invocation for an assignment.
	rpc AddCommandInvocationForAssignment (GAddCommandInvocationForAssignmentRequest) returns (GAddCommandInvocationForAssignmentResponse) {}
	
	// List command invocations one or more assignments.
	rpc ListCommandInvocationsForAssignments (GListCommandInvocationsForAssignmentsRequest) returns (GListCommandInvocationsForAssignmentsResponse) {}
	
	// List command invocations for one or more areas.
	rpc ListCommandInvocationsForAreas (GListCommandInvocationsForAreasRequest) returns (GListCommandInvocationsForAreasResponse) {}

	// #########################
	// ### COMMAND RESPONSES ###
	// #########################
	
	// Add command invocation for an assignment.
	rpc AddCommandResponseForAssignment (GAddCommandResponseForAssignmentRequest) returns (GAddCommandResponseForAssignmentResponse) {}
	
	// List command invocations for a command invocation.
	rpc ListCommandResponsesForInvocation (GListCommandResponsesForInvocationRequest) returns (GListCommandResponsesForInvocationResponse) {}
	
	// List command invocations for one or more assignments.
	rpc ListCommandResponsesForAssignments (GListCommandResponsesForAssignmentsRequest) returns (GListCommandResponsesForAssignmentsResponse) {}
	
	// List command invocations for one or more areas.
	rpc ListCommandResponsesForAreas (GListCommandResponsesForAreasRequest) returns (GListCommandResponsesForAreasResponse) {}
	
	// #####################
	// ### STATE CHANGES ###
	// #####################
	
	// Add state change for an assignment.
	rpc AddStateChangeForAssignment (GAddStateChangeForAssignmentRequest) returns (GAddStateChangeForAssignmentResponse) {}
	
	// List state changes for one or more assignments.
	rpc ListStateChangesForAssignments (GListStateChangesForAssignmentsRequest) returns (GListStateChangesForAssignmentsResponse) {}
	
	// List state changes for one or more areas.
	rpc ListStateChangesForAreas (GListStateChangesForAreasRequest) returns (GListStateChangesForAreasResponse) {}
}

// ####################
// ### BATCH EVENTS ###
// ####################
	
// Request for adding a batch of device events.
message GAddDeviceEventBatchRequest {
	com.sitewhere.grpc.model.GUUID deviceAssignmentId = 1;
	com.sitewhere.grpc.model.GDeviceEventBatchCreateRequest request = 2;
}

// Response for adding a batch of device events.
message GAddDeviceEventBatchResponse {
	com.sitewhere.grpc.model.GDeviceEventBatchResponse response = 1;
}

// ######################
// ### GENERIC EVENTS ###
// ######################
	
// Request for getting an event by id.
message GGetDeviceEventByIdRequest {
	com.sitewhere.grpc.model.GUUID deviceId = 1;
	com.sitewhere.grpc.model.GUUID eventId = 2;
}

// Response for getting an event by id.
message GGetDeviceEventByIdResponse {
	com.sitewhere.grpc.model.GAnyDeviceEvent event = 1;
}
	
// Request for getting an event by alternate id.
message GGetDeviceEventByAlternateIdRequest {
	com.sitewhere.grpc.model.GUUID deviceId = 1;
	string alternateId = 2;
}

// Response for getting an event by alternate id.
message GGetDeviceEventByAlternateIdResponse {
	com.sitewhere.grpc.model.GAnyDeviceEvent event = 1;
}

// ####################
// ### MEASUREMENTS ###
// ####################
	
// Request for adding measurements for an assignment.
message GAddMeasurementsForAssignmentRequest {
	com.sitewhere.grpc.model.GUUID deviceAssignmentId = 1;
	com.sitewhere.grpc.model.GDeviceMeasurementsCreateRequest request = 2;
}
	
// Response for adding measurements for an assignment.
message GAddMeasurementsForAssignmentResponse {
	com.sitewhere.grpc.model.GDeviceMeasurements measurements = 1;
}
	
// Request for list of measurements for one or more assignments.
message GListMeasurementsForAssignmentsRequest {
	repeated com.sitewhere.grpc.model.GUUID deviceAssignmentIds = 1;
	com.sitewhere.grpc.model.GDateRangeSearchCriteria criteria = 2;
}
	
// Response for list of measurements for one or more assignments.
message GListMeasurementsForAssignmentsResponse {
	com.sitewhere.grpc.model.GDeviceMeasurementsSearchResults results = 1;
}
	
// Request for list of measurements for one or more areas.
message GListMeasurementsForAreasRequest {
	repeated com.sitewhere.grpc.model.GUUID areaIds = 1;
	com.sitewhere.grpc.model.GDateRangeSearchCriteria criteria = 2;
}
	
// Response for list of measurements for one or more areas.
message GListMeasurementsForAreasResponse {
	com.sitewhere.grpc.model.GDeviceMeasurementsSearchResults results = 1;
}

// #################
// ### LOCATIONS ###
// #################
	
// Request for adding location for an assignment.
message GAddLocationForAssignmentRequest {
	com.sitewhere.grpc.model.GUUID deviceAssignmentId = 1;
	com.sitewhere.grpc.model.GDeviceLocationCreateRequest request = 2;
}
	
// Response for adding location for an assignment.
message GAddLocationForAssignmentResponse {
	com.sitewhere.grpc.model.GDeviceLocation location = 1;
}
	
// Request for list of locations for one or more assigments.
message GListLocationsForAssignmentsRequest {
	repeated com.sitewhere.grpc.model.GUUID deviceAssignmentIds = 1;
	com.sitewhere.grpc.model.GDateRangeSearchCriteria criteria = 2;
}
	
// Response for list of locations for one or more assigments.
message GListLocationsForAssignmentsResponse {
	com.sitewhere.grpc.model.GDeviceLocationSearchResults results = 1;
}
	
// Request for list of locations for one or more areas.
message GListLocationsForAreasRequest {
	repeated com.sitewhere.grpc.model.GUUID areaIds = 1;
	com.sitewhere.grpc.model.GDateRangeSearchCriteria criteria = 2;
}
	
// Response for list of locations for one or more areas.
message GListLocationsForAreasResponse {
	com.sitewhere.grpc.model.GDeviceLocationSearchResults results = 1;
}

// ##############
// ### ALERTS ###
// ##############
	
// Request for adding alert for an assignment.
message GAddAlertForAssignmentRequest {
	com.sitewhere.grpc.model.GUUID deviceAssignmentId = 1;
	com.sitewhere.grpc.model.GDeviceAlertCreateRequest request = 2;
}
	
// Response for adding alert for an assignment.
message GAddAlertForAssignmentResponse {
	com.sitewhere.grpc.model.GDeviceAlert alert = 1;
}
	
// Request for list of alerts for one or more assignments.
message GListAlertsForAssignmentsRequest {
	repeated com.sitewhere.grpc.model.GUUID deviceAssignmentIds = 1;
	com.sitewhere.grpc.model.GDateRangeSearchCriteria criteria = 2;
}
// Response for list of alerts for one or more assignments.
message GListAlertsForAssignmentsResponse {
	com.sitewhere.grpc.model.GDeviceAlertSearchResults results = 1;
}
	
// Request for list of alerts for one or more areas.
message GListAlertsForAreasRequest {
	repeated com.sitewhere.grpc.model.GUUID areaIds = 1;
	com.sitewhere.grpc.model.GDateRangeSearchCriteria criteria = 2;
}
	
// Response for list of alerts for one or more areas.
message GListAlertsForAreasResponse {
	com.sitewhere.grpc.model.GDeviceAlertSearchResults results = 1;
}

// ###################
// ### STREAM DATA ###
// ###################
	
// Request for adding stream data for an assignment.
message GAddStreamDataForAssignmentRequest {
	com.sitewhere.grpc.model.GUUID deviceAssignmentId = 1;
	com.sitewhere.grpc.model.GDeviceStream deviceStream = 2;
	com.sitewhere.grpc.model.GDeviceStreamDataCreateRequest request = 3;
}
	
// Response for adding stream data for an assignment.
message GAddStreamDataForAssignmentResponse {
	com.sitewhere.grpc.model.GDeviceStreamData streamData = 1;
}
	
// Request for adding stream data for an assignment.
message GGetStreamDataForAssignmentRequest {
	com.sitewhere.grpc.model.GUUID deviceAssignmentId = 1;
	string streamId = 2;
	uint64 sequenceNumber = 3;
}
	
// Response for adding stream data for an assignment.
message GGetStreamDataForAssignmentResponse {
	com.sitewhere.grpc.model.GDeviceStreamData streamData = 1;
}
	
// Request for list of stream data for an assignment.
message GListStreamDataForAssignmentRequest {
	com.sitewhere.grpc.model.GUUID deviceAssignmentId = 1;
	string streamId = 2;
	com.sitewhere.grpc.model.GDateRangeSearchCriteria criteria = 3;
}
// Response for list of stream data for an assignment.
message GListStreamDataForAssignmentResponse {
	com.sitewhere.grpc.model.GDeviceStreamDataSearchResults results = 1;
}

// ###########################
// ### COMMAND INVOCATIONS ###
// ###########################
	
// Request for adding command invocation for an assignment.
message GAddCommandInvocationForAssignmentRequest {
	com.sitewhere.grpc.model.GUUID deviceAssignmentId = 1;
	com.sitewhere.grpc.model.GDeviceCommandInvocationCreateRequest request = 2;
}
	
// Response for adding command invocation for an assignment.
message GAddCommandInvocationForAssignmentResponse {
	com.sitewhere.grpc.model.GDeviceCommandInvocation invocation = 1;
}
	
// Request for list of command invocations for one or more assignments.
message GListCommandInvocationsForAssignmentsRequest {
	repeated com.sitewhere.grpc.model.GUUID deviceAssignmentIds = 1;
	com.sitewhere.grpc.model.GDateRangeSearchCriteria criteria = 2;
}
// Response for list of command invocations for one or more assignments.
message GListCommandInvocationsForAssignmentsResponse {
	com.sitewhere.grpc.model.GDeviceCommandInvocationSearchResults results = 1;
}
	
// Request for list of command invocations for one or more areas.
message GListCommandInvocationsForAreasRequest {
	repeated com.sitewhere.grpc.model.GUUID areaIds = 1;
	com.sitewhere.grpc.model.GDateRangeSearchCriteria criteria = 2;
}
	
// Response for list of command invocations for one or more areas.
message GListCommandInvocationsForAreasResponse {
	com.sitewhere.grpc.model.GDeviceCommandInvocationSearchResults results = 1;
}

// #########################
// ### COMMAND RESPONSES ###
// #########################
	
// Request for adding command response for an assignment.
message GAddCommandResponseForAssignmentRequest {
	com.sitewhere.grpc.model.GUUID deviceAssignmentId = 1;
	com.sitewhere.grpc.model.GDeviceCommandResponseCreateRequest request = 2;
}
	
// Response for adding command response for an assignment.
message GAddCommandResponseForAssignmentResponse {
	com.sitewhere.grpc.model.GDeviceCommandResponse response = 1;
}
		
// Request for list of command responses for an invocation.
message GListCommandResponsesForInvocationRequest {
	com.sitewhere.grpc.model.GUUID deviceId = 1;
	com.sitewhere.grpc.model.GUUID invocationEventId = 2;
	com.sitewhere.grpc.model.GDateRangeSearchCriteria criteria = 3;
}
// Response for list of command responses for an invocation.
message GListCommandResponsesForInvocationResponse {
	com.sitewhere.grpc.model.GDeviceCommandResponseSearchResults results = 1;
}
	
// Request for list of command responses for one or more assignments.
message GListCommandResponsesForAssignmentsRequest {
	repeated com.sitewhere.grpc.model.GUUID deviceAssignmentIds = 1;
	com.sitewhere.grpc.model.GDateRangeSearchCriteria criteria = 2;
}
// Response for list of command responses for one or more assignments.
message GListCommandResponsesForAssignmentsResponse {
	com.sitewhere.grpc.model.GDeviceCommandResponseSearchResults results = 1;
}
	
// Request for list of command responses for one or more areas.
message GListCommandResponsesForAreasRequest {
	repeated com.sitewhere.grpc.model.GUUID areaIds = 1;
	com.sitewhere.grpc.model.GDateRangeSearchCriteria criteria = 2;
}
	
// Response for list of command responses for one or more areas.
message GListCommandResponsesForAreasResponse {
	com.sitewhere.grpc.model.GDeviceCommandResponseSearchResults results = 1;
}

// #####################
// ### STATE CHANGES ###
// #####################
	
// Request for adding state change for an assignment.
message GAddStateChangeForAssignmentRequest {
	com.sitewhere.grpc.model.GUUID deviceAssignmentId = 1;
	com.sitewhere.grpc.model.GDeviceStateChangeCreateRequest request = 2;
}
	
// Response for adding state change for an assignment.
message GAddStateChangeForAssignmentResponse {
	com.sitewhere.grpc.model.GDeviceStateChange stateChange = 1;
}
	
// Request for list of state changes for one or more assignments.
message GListStateChangesForAssignmentsRequest {
	repeated com.sitewhere.grpc.model.GUUID deviceAssignmentIds = 1;
	com.sitewhere.grpc.model.GDateRangeSearchCriteria criteria = 2;
}
// Response for list of state changes for one or more assignments.
message GListStateChangesForAssignmentsResponse {
	com.sitewhere.grpc.model.GDeviceStateChangeSearchResults results = 1;
}
	
// Request for list of state changes for one or more areas.
message GListStateChangesForAreasRequest {
	repeated com.sitewhere.grpc.model.GUUID areaIds = 1;
	com.sitewhere.grpc.model.GDateRangeSearchCriteria criteria = 2;
}
	
// Response for list of state changes for one or more areas.
message GListStateChangesForAreasResponse {
	com.sitewhere.grpc.model.GDeviceStateChangeSearchResults results = 1;
}


